<resources>
    <string name="app_name">MyGithubUserFinal</string>
    <string name="UserName">Username</string>
    <string name="id_user">ID User</string>
    <string name="favorite">Favorite</string>
    <string name="images_user">User Image</string>
    <string name="title_activity_detail_user">DetailUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="company">Company</string>
    <string name="location">Country</string>
    <string name="repositori">repository</string>
    <string name="followers">folowers</string>
    <string name="followings">followings</string>
    <string name="menu_search">Search</string>
    <string name="menu_setting">Settings</string>
    <string name="hint">Search User</string>
    <string name="image_button_clear">Image button clear</string>
    <string name="msg_delete_fav_success">Delete Success %1$s</string>
    <string name="msg_delete_fav_failed">Delete Failed %1$s</string>
    <string name="no_data_favorite_user">No data Movie Favorite</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="daily_remainder">Daily Remainder</string>
    <string name="message_daily_remainder">Hi you haven\'t checked User today</string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_settings_user">SettingsUser</string>
</resources>